system: simplify nss config

--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -113,13 +113,7 @@
   (host-name "thinkpad")
   (keyboard-layout (keyboard-layout "us"))
   (name-service-switch
-    (name-service-switch
-      (hosts
-       (list %files
-             (name-service (name "mdns4_minimal")
-                           (reaction (lookup-specification
-                                      (not-found => return))))
-             (name-service (name "dns"))))))
+    (mdns-host-lookup-nss #:ipv6? #f))
   (bootloader
    (bootloader-configuration
     (theme (grub-theme
