system: update kernel

--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -104,7 +104,7 @@
       config))
 
 (operating-system
-  (kernel linux-6.17)
+  (kernel linux)
   (kernel-arguments '("quiet" "loglevel=1"))
   (initrd microcode-initrd)
   (initrd-modules (cons "i915" %base-initrd-modules))
